--- a/404.html
+++ b/404.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact</title>
+    <title>错误页面</title>
     <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/404.css">
 </head>
 <body>
 <!--header start-->
@@ -34,13 +34,13 @@
         <div class="headder-bottom-r fr">
             <div class="header-nav">
                 <ul>
-                    <li><a href="index.html" >Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="map.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="404.html">New</a></li>
+                    <li><a href="404.html" style="color: #01B1D7">New</a></li>
                     <li><a href="pages.html">Pages</a></li>
-                    <li><a href="contact.html" style="color: #01B1D7">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="header-search">
@@ -51,56 +51,45 @@
     </div>
 </div>
 <!--header end-->
-<!--.main start-->
+<!--main start-->
 <div class="main">
     <div class="ourservices">
         <div class="w">
-            <p class="fl">Contact Us</p>
+            <p class="fl">Error Page</p>
             <div class="dz fr">
                 <a href="index.html">Home</a> &nbsp;&nbsp;<i style="color: bisque">/</i> &nbsp;&nbsp;
-                <a href="services.html">Services</a>
+                <a href="services.html">Error</a>
             </div>
         </div>
     </div>
-    <div class="denglu">
-        <div class="w">
-            <div class="information">
-                <h3>Contact Information</h3>
-                <span></span>
-                <p>Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim  qui
-                    blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+    <div class="section">
+            <div class="section-top">
+                <div class="four-icon w">
+                    <img src="images/10_404_03.png" alt="">
+                </div>
             </div>
-            <div class="address">
-                <div style="border-right: 1px solid #000;"><img src="icon/contact-icon1.png" alt="">839 Hoffman Avenue<br>Australia Melbourne, 10016</div>
-                <div style="border-right: 1px solid #000;margin-left: 20px;"><img src="icon/contact-icon2.png"style="left: 7px" alt="">info@digitalcenturysf.com <br>support@digitalcenturysf.com</div>
-                <div style="margin-left: 20px"><img src="icon/contact-icon3.png" alt=""> + 1-510-915-6237<br>+ 1-800-640-9068</div>
+            <div class="section-bottom">
+            <span>
+                The page you are looking is not available or has been removed.
+                <br>
+                Try going to Home Page by using the button below.
+            </span>
+                <a href="#">
+                    Go   To   Home   Page
+                </a>
             </div>
-            <div class="send">
-                <h3>Send Me Message</h3>
-                <span style="display:inline-block;width: 61px;height: 2px;background-color:#01B1D7;"></span>
-                <form action="1.php" method="post">
-                    <fieldset>
-                        <input type="text" name="username" placeholder="Name*" id="input1">
-                        <input type="text" placeholder="E-mail*" id="input2">
-                        <br>
-                        <input type="text" placeholder="Message*" id="input3">
-                    </fieldset>
-                </form>
-                <button type="submit">SUBMIT&nbsp;&nbsp;NOW</button>
-            </div>
-        </div>
     </div>
     <div class="pleasezhuce">
-    <div class="w">
-        <a class="fl" href="denglu.html">To get more <span>Front-end services</span>&nbsp;please find TiL</a>
-        <button class="fr">
-            Register&nbsp;&nbsp;Now
-        </button>
+        <div class="w">
+            <a class="fl" href="denglu.html">To get more <span>Front-end services</span>&nbsp;please find TiL</a>
+            <button class="fr">
+                Register&nbsp;&nbsp;Now
+            </button>
+        </div>
     </div>
 </div>
-</div>
-<!--.main end-->
-<!--footer-->
+<!--main end-->
+<!--.footer start-->
 <div class="footer clearfix">
     <div class="footer-top">
         <div class="footer-top-title">
@@ -163,6 +152,6 @@
         © Travel in Life's Website. Prohibition of reprint！
     </div>
 </div>
-<!--footerend-->
+<!--footet end-->
 </body>
 </html>
