--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/index.css">
     <link href="css/stylelun.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="js/koala.min.1.5.js"></script>
+    <script src="js/Production%20version.jquery.js"></script>
 </head>
 <body>
     <!--header start-->
@@ -40,7 +41,7 @@
                         <li><a href="map.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="Projects.html">Projects</a></li>
-                        <li><a href="new.html">New</a></li>
+                        <li><a href="404.html">New</a></li>
                         <li><a href="pages.html">Pages</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
@@ -59,9 +60,9 @@
         <div id="fsD1" class="focus">
 
             <div id="D1pic1" class="fPic" style="position: relative">
-                <div class="grow" style="position: absolute;top: 270px;left: 355px">
-                    <h3>Grow your business</h3>
-                </div>
+                <!--<div id="grow" class="grow" style="position: absolute;top: 270px;left: 355px">-->
+                    <!--<h3>Grow your business</h3>-->
+                <!--</div>-->
                 <div class="fcon">
                     <a href="index.html"><img src="images/slider1.jpg" /></a>
                 </div>
@@ -91,17 +92,22 @@
         </div>
         <!--轮播图end-->
         <div class="bussiness">
-            <p style="margin-left: 61px"><img src="images/s1.png" style="top: -18px;left: -46px" alt="">Bussiness Plan <span>Read More<i>&gt;</i></span><a
-                    href="">
+            <p style="margin-left: 61px"><img src="images/s1.png" style="top: -18px;left: -46px" alt="">Bussiness Plan <span>Read More<i>&gt;</i></span>
+                <a href="javascript:void(0)">
                 Simply dummy text of the printing <br>andrety esetting industry. Lorem Ipsum <br>has beeyan the indust standard
                 <br>unknown.
-            </a></p>
-            <p style="margin-left: 276px"><img src="images/s2.png" alt="" style="top: -12px;left: -55px">Mutual Funds <span>Read More<i>&gt;</i></span><a
-                    href="">Simply dummy text of the printing <br>andrety esetting industry. Lorem Ipsum <br>has beeyan the indust standard
-                <br>unknown.</a></p>
-            <p style="margin-left: 270px"><img src="images/s3.png" alt="" style="top: -22px;left: -48px">Bussiness Consulting<span>Read More<i>&gt;</i></span><a
-                    href="" style="top: 21px;left: 0px;">Simply dummy text of the printing <br>andrety esetting industry. Lorem Ipsum <br>has beeyan the indust standard
-                <br>unknown.</a></p>
+                </a>
+            </p>
+            <p style="margin-left: 276px"><img src="images/s2.png" alt="" style="top: -12px;left: -55px">Mutual Funds <span>Read More<i>&gt;</i></span>
+                <a href="javascript:void(0)">Simply dummy text of the printing <br>andrety esetting industry. Lorem Ipsum <br>has beeyan the indust standard
+                <br>unknown.
+                </a>
+            </p>
+            <p style="margin-left: 270px"><img src="images/s3.png" alt="" style="top: -22px;left: -48px">Bussiness Consulting<span>Read More<i>&gt;</i></span>
+                <a href="javascript:void(0)">Simply dummy text of the printing <br>andrety esetting industry. Lorem Ipsum <br>has beeyan the indust standard
+                <br>unknown.
+                </a>
+            </p>
         </div>
         <div class="konw">
             <div class="konww">
