--- a/map.html
+++ b/map.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-    <title>Title</title>
+    <title>About</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/about.css">
     <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
@@ -49,7 +49,7 @@
                     <li><a href="map.html" style="color: #01B1D7">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="new.html">New</a></li>
+                    <li><a href="404.html">New</a></li>
                     <li><a href="pages.html">Pages</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
