--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                     <li><a href="map.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="404.html">New</a></li>
+                    <li><a href="new.html">New</a></li>
                     <li><a href="pages.html">Pages</a></li>
                     <li><a href="contact.html" style="color: #01B1D7">Contact</a></li>
                 </ul>
@@ -91,13 +91,13 @@
         </div>
     </div>
     <div class="pleasezhuce">
-    <div class="w">
-        <a class="fl" href="denglu.html">To get more <span>Front-end services</span>&nbsp;please find TiL</a>
-        <button class="fr">
-            Register&nbsp;&nbsp;Now
-        </button>
+        <div class="w">
+            <a class="fl" href="denglu.html">To get more <span>Front-end services</span>&nbsp;please find TiL</a>
+            <button class="fr">
+                Register&nbsp;&nbsp;Now
+            </button>
+        </div>
     </div>
-</div>
 </div>
 <!--.main end-->
 <!--footer-->
