--- a/Projects.html
+++ b/Projects.html
@@ -38,7 +38,7 @@
                     <li><a href="map.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="Projects.html" style="color: #01B1D7">Projects</a></li>
-                    <li><a href="404.html">New</a></li>
+                    <li><a href="new.html">New</a></li>
                     <li><a href="pages.html">Pages</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
