--- a/pages.html
+++ b/pages.html
@@ -148,7 +148,7 @@
                     <li><a href="map.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="Projects.html">Projects</a></li>
-                    <li><a href="404.html">New</a></li>
+                    <li><a href="new.html">New</a></li>
                     <li><a href="pages.html" style="color: #01B1D7">Pages</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
